--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
   },
   "homepage": "https://github.com/Anushkaguptaaaa/portfolio#readme",
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "framer-motion": "^10.16.0",
-    "react-icons": "^4.11.0",
-    "emailjs-com": "^3.2.0"
+    "next": "13.4.19",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "framer-motion": "10.16.0",
+    "react-icons": "4.11.0",
+    "emailjs-com": "3.2.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "tailwindcss": "3.3.3",
+    "postcss": "8.4.31",
+    "autoprefixer": "10.4.16"
   }
 }
